refactored end to end